Fixes some broken CSS

--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 html {
   font-family: sans-serif;
+  line-height: 1.5;
 }
 
 body {
@@ -23,7 +24,6 @@ div,
 main,
 p {
   padding: 0.5rem;
-  margin: 1rem 0;
   border: 1px solid transparent;
   border-radius: 5px;
 }
@@ -32,6 +32,7 @@ p {
   border: solid 5px #4a4e69;
   border-radius: 0;
   color: #4a4e69;
+  margin-bottom: 1rem;
 
   transition: 0.2s;
   &:hover {
